--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -54,7 +54,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push with NPM token
-        if: ${{ NPM_TOKEN != "" }}
+        if: ${{ secrets.NPM_TOKEN != "" }}
         id: docker_build_with_npm_token
         uses: docker/build-push-action@v3
         with:
@@ -67,7 +67,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push without npm token
-        if: ${{ NPM_TOKEN == "" }}
+        if: ${{ secrets.NPM_TOKEN == "" }}
         id: docker_build_without_npm_token
         uses: docker/build-push-action@v3
         with:
