--- a/.github/workflows/docker_build_push_image.yml
+++ b/.github/workflows/docker_build_push_image.yml
@@ -9,7 +9,9 @@ on:
         required: true
       DOCKERHUB_REPO:
         required: true
+    inputs:
       DOCKER_TARGET_PLATFORM:
+        type: string
         required: true
 
 jobs:
@@ -38,12 +40,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: ${{ secrets.DOCKER_TARGET_PLATFORM }}
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: ${{ secrets.DOCKER_TARGET_PLATFORM }}
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -56,7 +58,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: ${{ secrets.DOCKER_TARGET_PLATFORM }}
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
