--- a/.github/workflows/docker_build_push_nodeservice.yml
+++ b/.github/workflows/docker_build_push_nodeservice.yml
@@ -9,9 +9,11 @@ on:
         required: true
       DOCKERHUB_REPO:
         required: true
-      DOCKER_TARGET_PLATFORM:
-        required: true
       NPM_TOKEN:
+        required: true
+    inputs:
+      DOCKER_TARGET_PLATFORM:
+        type: string
         required: true
 
 jobs:
@@ -40,12 +42,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: ${{ secrets.DOCKER_TARGET_PLATFORM }}
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: ${{ secrets.DOCKER_TARGET_PLATFORM }}
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -58,7 +60,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: ${{ secrets.DOCKER_TARGET_PLATFORM }}
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
           push: true
           build-args: |
             NPM_TOKEN=${{ secrets.NPM_TOKEN }}
