--- a/.github/workflows/docker_build_push_nodeservice.yml
+++ b/.github/workflows/docker_build_push_nodeservice.yml
@@ -15,10 +15,14 @@ on:
       DOCKER_TARGET_PLATFORM:
         type: string
         required: true
+      runs-on:
+        type: string
+        required: false
+        default: ubuntu-latest
 
 jobs:
   docker_build_push_nodeservice:
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runs-on }}
     steps:
 
       - name: Checkout
